bug 743587 Intermittent Linux talos crash [@ nsHttpConnection::CloseTransaction] r=honzab